[package]
name = "content"
version = "0.1.0"
edition = "2024"

[dependencies]
rust_http = { path = "../rust_http" }
tokio = { version = "1.46.0", features = ["full"] }
regex = "1.11.1"
dotenvy = "0.15.7"
serde_json = "1.0.140"
mlua = { version = "0.10.5", features = ["lua54", "vendored"] }

rusty_v8 = "0.32.1"
deno_core = "0.352.0" # { version = "0.352.0", features = ["full"] }
deno_error = "0.6.1"
deno_ops = "0.228.0"
anyhow = "1.0.98"
# v8 = { version = "137.1.0", default-features = false }
