[package]
name = "content"
version = "0.1.0"
edition = "2024"

[dependencies]
rust_http = { path = "../rust_http" }
tokio = { version = "1.46.0", features = ["full"] }
regex = "1.11.1"
dotenvy = "0.15.7"
serde_json = "1.0.140"
mlua = { version = "0.10.5", features = ["lua54", "vendored"] }
# ctrlc = "3.4.7"

## deno, but extremely disorganized 
# rusty_v8 = "0.32.1"
# anyhow = "1.0.98"
# once_cell = "1.21.3"
# deno_core = "0.352.0" # { version = "0.352.0", features = ["full"] }
# deno_error = "0.6.1"
# deno_ops = "0.228.0"
# deno_web = "0.240.0"
# deno_webidl = "0.209.0"
# deno_console = "0.209.0"
# deno_url = "0.209.0"
# # deno_timers = "0.34.0"
# deno_fetch = "0.233.0"
# deno_runtime = "0.217.0"
# v8 = { version = "137.1.0", default-features = false }
# libsqlite3-sys = { version = "0.34.0", features = ["bundled"] }
# rusqlite = { version = "0.36.0", features = ["bundled"] }

deno_core = "0.352.0"
# deno_fs = "0.120.0"
# deno_runtime = "0.218.0"
# anyhow = "1.0.98"
# ureq = "3.0.12"
# deno_ast = { version = "0.48.1", features = ["transpiling"] }
# colored = "3.0.0"


# [dependencies.deno_core]
# version = "0.352.0"
# features = [
#   "v8",            # V8 engine bindings
#   "serde",         # Serde support for ops and snapshots
#   "serde_v8",      # Bridging Rust serde <-> V8
#   "rustyline",     # (Optional) REPL support
#   "tokio",         # Needed for async ops
#   "futures",       # Future support
#   "snapshot",      # For snapshot creation
#   "resolve_paths", # URL resolution helpers
#   # You can also add "bytecode" or other feature flags if needed
# ]
